src/App.css
:root {
  --pr-color: #909090;
  --sc-color: #303030;
  --bg-color: #202020;
  /* --pr-color: #32e7e7;
  --sc-color: #0785a1;
  --bg-color: #044958; */
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--bg-color);
}

.App {
  text-align: center;
  color: #fff;
}
nav {
  background: rgb(7, 133, 161);
  background: linear-gradient(180deg, var(--sc-color) 0%, var(--bg-color) 100%);
}
nav .nav-bar {
  display: flex;
  justify-content: space-between;
  width: 80%;
  margin: auto;
  padding-top: 20px;
  align-items: center;
}

nav a svg {
  width: 35px;
}
nav h2 {
  color: var(--pr-color);
}

.game {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 100px;
}
.game .question {
  transition: 0.5s ease-in-out;
}

.cl {
  margin-bottom: 40px;
}
.game .answers {
  position: relative;
  width: 100%;
  display: grid;
  grid-template-columns: auto auto;
  justify-content: center;
  gap: 20px;
  text-align: center;
  margin: 20px 0;
}
.game .correct-answer {
  width: 100%;
  text-align: center;
  margin-top: -33px;
}
.game .correct-answer-chaild {
  /* background-color: green; */
  width: fit-content;
  margin: auto;
  padding: 5px 15px;
  border-radius: 10px;
  border: 2px solid #1affd5;
}
.game .correct-answer-chaild span {
  color: #1affd5;
  font-weight: bold;
}
.game .answers .answer {
  max-width: 25%;
  min-width: 300px;
  background-color: var(--sc-color);
  border-radius: 10px;
  padding: 10px 5px;
  cursor: pointer;
}

.game .answers .correct {
  background-color: #1affd5;
}
.game .answers .incorrect {
  background-color: #e51919;
}
.game .answers .score {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 80px;
  height: 80px;
  transform: translate(-50%, -50%);
  background-color: var(--bg-color);
  border-radius: 50%;
  border: 2px solid var(--pr-color);
  padding: 10px;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}
.game button {
  background-color: transparent;
  outline: none;
  border: none;
  margin: 20px;
  cursor: pointer;
}
.game button svg {
  width: 35px;
}
.game .not-clicked {
  background-color: #e51919;
  border-radius: 10px;
  padding: 5px 20px;
  margin: 20px;
  font-weight: bold;
}
.question-number {
  width: 80%;
  height: 25px;
  max-width: 650px;
  background-color: var(--sc-color);
  border-radius: 15px;
  text-align: left;
  position: relative;
  margin: auto;
}
.question-number span {
  display: block;
  height: 100%;
  background-color: var(--pr-color);
  border-radius: 15px;
  padding: 0 10px;
  position: absolute;
  left: 0;
  top: 0;
}
.question-number p {
  z-index: 10;
  color: #33333380;
  position: absolute;
  left: 10px;
  top: 0;
}

.heading-one {
  color: var(--sc-color);
  font-size: 60px;
  margin: 35px auto;
}
.house {
  position: absolute;
  bottom: 30px;
  left: 50%;
  transform: translateX(-50%);
}
.categorys,
.game-over {
  margin-top: 100px;
  display: flex;
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
  gap: 20px;
  color: var(--pr-color);
  height: 60vh;
}
.categorys {
  border: 5px solid var(--pr-color);
  border-radius: 20px;
  width: 80%;
  padding-top: 40px;
  margin: auto;
  /* position: absolute;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%); */
  height: calc(100vh - 250px);
}

.categorys select:focus-visible {
  outline: none;
}
.categorys select {
  background-color: transparent;
  border-radius: 10px;
  color: var(--pr-color);
  padding: 5px;
  min-width: 200px;
  max-width: 90%;
  outline: none;
  border: 3px solid var(--pr-color);
}

.categorys select option {
  color: var(--bg-color);
  background-color: var(--pr-color);
}

.categorys label {
  margin-bottom: -15px;
}

.categorys a,
.categorys input {
  color: var(--pr-color);
  background-color: transparent;
  border-radius: 10px;
  padding: 5px;
  min-width: 200px;
  text-decoration: none;
  outline: none;
}

.categorys a svg {
  width: 35px;
}

.categorys input {
  border: 3px solid var(--pr-color);
}

.categorys ::placeholder {
  color: #fff;
  font-size: 1em;
}

@media (max-width: 745px) {
  .heading-one {
    font-size: 45px;
  }
}

@media (max-width: 500px) {
  .heading-one {
    font-size: 25px;
  }
  nav svg {
    width: 25px;
  }
  nav h2 {
    font-size: 25px;
  }
  .categorys {
    min-width: 90%;
  }
  .categorys a svg {
    margin-top: 60px;
  }
  .game {
    margin-top: 20px;
  }
  /* .game .answers .answer {
    grid-column: 1 / span 2;
  } */
  .game .answers {
    grid-template-columns: auto;
  }
  .game .answers .score {
    position: inherit;
  }
  .game .question {
    font-size: 20px;
  }
  .game .category {
    font-size: 16px;
    color: var(--sc-color);
    margin-bottom: 10px;
  }
}

